# TSW01-REPRODUCIBLE-OPEN-SOURCE

./: LICENSE  main.py  pyproject.toml
.github/workflows/: autograding.yml
src/opticaldisp/: dispersion.py
tests/: test_waveforms.py
